[package]
name = "websocket-signaling"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
async-std = "1.9.0"
env_logger = "0.8.4"
serde = "1.0.126"
tokio = "1.8.1"